<resources>
    <string name="app_name">Shit</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">WELCOME</string>
    <string name="username">Username</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="create">Create new\n account</string>
    <string name="agree">By tapping \"Sing up\" you agree to the</string>
    <string name="terms"><![CDATA[terms & conditions]]></string>
    <string name="create_one">create new account</string>

</resources>
