<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6F8"
    tools:context="com.example.root.shit.view.login.LoginActivity">


    <TextView
        android:id="@+id/textView"
        fontPath="fonts/sherlocked.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="29dp"
        android:gravity="center"
        android:text="@string/create"
        android:textSize="24sp" />


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"

        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_firstname"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            app:hintTextAppearance="@style/TextInput">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tied_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_lastname"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            app:hintTextAppearance="@style/TextInput">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tied_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/username"
        app:hintTextAppearance="@style/TextInput">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tied_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_username"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/email"
        app:hintTextAppearance="@style/TextInput">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tied_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_email"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/password"
        app:hintTextAppearance="@style/TextInput">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tied_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/til_password"
        android:layout_alignRight="@+id/til_password"
        android:layout_alignEnd="@+id/til_password">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="я"
            android:text="@string/agree" />

        <TextView
            android:id="@+id/tv_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/terms"
            android:textColor="#e6b7b6" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/round"
        android:fontFamily="serif"
        android:text="CREATE NEW ACCOUNT"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>
